// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker should render 1`] = `
<div
  class="date-picker"
>
  <div>
    <div
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DatePicker should render 2`] = `
<div
  class="rdt"
>
  <div />
  <div
    class="rdtPicker"
  >
    <div
      class="rdtDays"
    >
      <table>
        <thead>
          <tr>
            <th
              class="rdtPrev"
            >
              <span>
                ‹
              </span>
            </th>
            <th
              class="rdtSwitch"
              colspan="5"
              data-value="3"
            >
              April 2017
            </th>
            <th
              class="rdtNext"
            >
              <span>
                ›
              </span>
            </th>
          </tr>
          <tr>
            <th
              class="dow"
            >
              Su
            </th>
            <th
              class="dow"
            >
              Mo
            </th>
            <th
              class="dow"
            >
              Tu
            </th>
            <th
              class="dow"
            >
              We
            </th>
            <th
              class="dow"
            >
              Th
            </th>
            <th
              class="dow"
            >
              Fr
            </th>
            <th
              class="dow"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="26"
              data-year="2017"
            >
              26
            </td>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="27"
              data-year="2017"
            >
              27
            </td>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="28"
              data-year="2017"
            >
              28
            </td>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="29"
              data-year="2017"
            >
              29
            </td>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="30"
              data-year="2017"
            >
              30
            </td>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="31"
              data-year="2017"
            >
              31
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="1"
              data-year="2017"
            >
              1
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-month="3"
              data-value="2"
              data-year="2017"
            >
              2
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="3"
              data-year="2017"
            >
              3
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="4"
              data-year="2017"
            >
              4
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="5"
              data-year="2017"
            >
              5
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="6"
              data-year="2017"
            >
              6
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="7"
              data-year="2017"
            >
              7
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="8"
              data-year="2017"
            >
              8
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-month="3"
              data-value="9"
              data-year="2017"
            >
              9
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="10"
              data-year="2017"
            >
              10
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="11"
              data-year="2017"
            >
              11
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="12"
              data-year="2017"
            >
              12
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="13"
              data-year="2017"
            >
              13
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="14"
              data-year="2017"
            >
              14
            </td>
            <td
              class="rdtDay rdtToday"
              data-month="3"
              data-value="15"
              data-year="2017"
            >
              15
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-month="3"
              data-value="16"
              data-year="2017"
            >
              16
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="17"
              data-year="2017"
            >
              17
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="18"
              data-year="2017"
            >
              18
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="19"
              data-year="2017"
            >
              19
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="20"
              data-year="2017"
            >
              20
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="21"
              data-year="2017"
            >
              21
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="22"
              data-year="2017"
            >
              22
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-month="3"
              data-value="23"
              data-year="2017"
            >
              23
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="24"
              data-year="2017"
            >
              24
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="25"
              data-year="2017"
            >
              25
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="26"
              data-year="2017"
            >
              26
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="27"
              data-year="2017"
            >
              27
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="28"
              data-year="2017"
            >
              28
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="29"
              data-year="2017"
            >
              29
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-month="3"
              data-value="30"
              data-year="2017"
            >
              30
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="1"
              data-year="2017"
            >
              1
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="2"
              data-year="2017"
            >
              2
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="3"
              data-year="2017"
            >
              3
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="4"
              data-year="2017"
            >
              4
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="5"
              data-year="2017"
            >
              5
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="6"
              data-year="2017"
            >
              6
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`DatePicker should render date format only with month 1`] = `
<div>
  <div>
    <div
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MMMM"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DatePicker should render date format only with year 1`] = `
<div>
  <div>
    <div
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="YYYY"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DatePicker should render date picker with time picker 1`] = `
<div>
  <div>
    <div
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY h:mm A"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DatePicker should render date picker with time picker 2`] = `
<div
  class="rdt"
>
  <div />
  <div
    class="rdtPicker"
  >
    <div
      class="rdtDays"
    >
      <table>
        <thead>
          <tr>
            <th
              class="rdtPrev"
            >
              <span>
                ‹
              </span>
            </th>
            <th
              class="rdtSwitch"
              colspan="5"
              data-value="3"
            >
              April 2017
            </th>
            <th
              class="rdtNext"
            >
              <span>
                ›
              </span>
            </th>
          </tr>
          <tr>
            <th
              class="dow"
            >
              Su
            </th>
            <th
              class="dow"
            >
              Mo
            </th>
            <th
              class="dow"
            >
              Tu
            </th>
            <th
              class="dow"
            >
              We
            </th>
            <th
              class="dow"
            >
              Th
            </th>
            <th
              class="dow"
            >
              Fr
            </th>
            <th
              class="dow"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="26"
              data-year="2017"
            >
              26
            </td>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="27"
              data-year="2017"
            >
              27
            </td>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="28"
              data-year="2017"
            >
              28
            </td>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="29"
              data-year="2017"
            >
              29
            </td>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="30"
              data-year="2017"
            >
              30
            </td>
            <td
              class="rdtDay rdtOld"
              data-month="2"
              data-value="31"
              data-year="2017"
            >
              31
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="1"
              data-year="2017"
            >
              1
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-month="3"
              data-value="2"
              data-year="2017"
            >
              2
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="3"
              data-year="2017"
            >
              3
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="4"
              data-year="2017"
            >
              4
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="5"
              data-year="2017"
            >
              5
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="6"
              data-year="2017"
            >
              6
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="7"
              data-year="2017"
            >
              7
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="8"
              data-year="2017"
            >
              8
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-month="3"
              data-value="9"
              data-year="2017"
            >
              9
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="10"
              data-year="2017"
            >
              10
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="11"
              data-year="2017"
            >
              11
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="12"
              data-year="2017"
            >
              12
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="13"
              data-year="2017"
            >
              13
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="14"
              data-year="2017"
            >
              14
            </td>
            <td
              class="rdtDay rdtToday"
              data-month="3"
              data-value="15"
              data-year="2017"
            >
              15
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-month="3"
              data-value="16"
              data-year="2017"
            >
              16
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="17"
              data-year="2017"
            >
              17
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="18"
              data-year="2017"
            >
              18
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="19"
              data-year="2017"
            >
              19
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="20"
              data-year="2017"
            >
              20
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="21"
              data-year="2017"
            >
              21
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="22"
              data-year="2017"
            >
              22
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-month="3"
              data-value="23"
              data-year="2017"
            >
              23
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="24"
              data-year="2017"
            >
              24
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="25"
              data-year="2017"
            >
              25
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="26"
              data-year="2017"
            >
              26
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="27"
              data-year="2017"
            >
              27
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="28"
              data-year="2017"
            >
              28
            </td>
            <td
              class="rdtDay"
              data-month="3"
              data-value="29"
              data-year="2017"
            >
              29
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-month="3"
              data-value="30"
              data-year="2017"
            >
              30
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="1"
              data-year="2017"
            >
              1
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="2"
              data-year="2017"
            >
              2
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="3"
              data-year="2017"
            >
              3
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="4"
              data-year="2017"
            >
              4
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="5"
              data-year="2017"
            >
              5
            </td>
            <td
              class="rdtDay rdtNew"
              data-month="4"
              data-value="6"
              data-year="2017"
            >
              6
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr>
            <td
              class="rdtTimeToggle"
              colspan="7"
            >
              12:00 AM
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`DatePicker should render error 1`] = `
<div>
  <div>
    <div
      class="input default left error"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DatePicker should render error when invalid value is set 1`] = `
<div>
  <div>
    <div
      class="input default left error"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="YYYY"
        type="text"
        value="xxx"
      />
    </div>
  </div>
</div>
`;

exports[`DatePicker should render null value as empty string 1`] = `
<div>
  <div>
    <div
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
